--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <header>
       <!-- logo -->
+      <link rel="stylesheet" type="text/css" href="./style.css">
+
       <h1>Exceptional Realty Group</h1>
 
       <nav>
